更新桌面板程式打包方法，包含可執行jar與exe檔案

--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -11,6 +11,10 @@ buildscript {
   }
 }
 plugins {
+  id 'java'
+  id 'edu.sc.seis.launch4j' version '2.5.4'
+}
+plugins {
   id "application"
 }
 apply plugin: 'io.github.fourlastor.construo'
@@ -179,3 +183,33 @@ startScripts.classpath = project.tasks.jar.outputs.files
 if(enableGraalNative == 'true') {
   apply from: file("nativeimage.gradle")
 }
+
+jar {
+  archiveBaseName.set("DoraSurvivor") // 可改成你要的檔案名稱
+  archiveVersion.set("0.8.0")
+
+  manifest {
+    attributes 'Main-Class': 'com.hotaruinori.lwjgl3.Lwjgl3Launcher'
+  }
+
+  from {
+    configurations.runtimeClasspath.collect {
+      it.isDirectory() ? it : zipTree(it)
+    }
+  }
+
+  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+launch4j {
+  mainClassName = 'com.hotaruinori.lwjgl3.Lwjgl3Launcher'  // 改成你的主類別
+  outputDir = "build/launch4j"
+  outfile = "DoraSurvivor.exe"
+  jar = "${buildDir}/libs/Dora-Survivor-1.0.0.jar" // 跟上面 jar 設定一致
+  bundledJrePath = "jre" // 要壓縮成包給使用者的 JRE 資料夾名
+  jvmOptions = ['-Xmx512M']
+  copyConfigurable = files(jar) // ✅ 修正這行
+  dontWrapJar = false
+}
+//打包方式： ./gradlew clean lwjgl3:jar lwjgl3:launch4j
+//打包補充說明： 要在專案跟目錄執行，另外需要提供jre(openjdk)中的檔案放在Try-game\lwjgl3\build\launch4j\jre 資料夾內
