--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,9 @@ ashleyVersion=1.7.4
 box2dlightsVersion=1.5
 graalHelperVersion=2.0.1
 enableGraalNative=false
+android.useAndroidX=true
+android.enableR8.fullMode=false
+gwtFrameworkVersion=2.11.0
+gwtPluginVersion=1.1.29
 gdxVersion=1.13.1
 projectVersion=1.0.0
