更新字體大小與中文顯示

--- a/html/build.gradle
+++ b/html/build.gradle
@@ -180,3 +180,5 @@ tasks.register('copyAssetsToWebapp') {
 tasks.named("dist").configure {
   dependsOn("copyAssetsToWebapp")
 }
+
+//./gradlew html:dist --warning-mode all
